# desagregacion-dsg-upc

./: .env.example  .gitignore  main.py  pyproject.toml
config/: config.yaml.example  settings.py
src/: utils_db.py
src/desagregacion_dsg_upc/: __init__.py  exceptions.py  utils.py  utils_db.py
src/desagregacion_dsg_upc/config/: settings.py
src/desagregacion_dsg_upc/rules/: __init__.py  base.py  consulta_cantidad_menor.py  consulta_psicologia_cantidad_mayor_15.py  consulta_psicologia_cantidad_menor_15.py  consulta_psicologia_cantidad_menor_igual_15.py  contiene_curaci.py  contiene_domicili.py  contiene_terapia_codigo_osi.py
tests/: conftest.py  test_regla_consulta_cantidad_menor.py  test_regla_consulta_psicologia_cantidad_mayor_15.py  test_regla_consulta_psicologia_cantidad_menor_15.py  test_regla_contiene_curaci.py  test_regla_contiene_domicili.py  test_regla_contiene_terapia_codigo_osi.py
